--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="minimalist.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
 	<title>Minimalist</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
 		<h3 class="s1">Minimalist,Cute</h3>
 		<h3 class="s2">Opening hours-7am to 7pm</h3>
 	</div>
-	<a href="#" class="button">Back</a>
+	<a href="https://shunlaelin.github.io/Categories/" class="button">Back</a>
 
 </body>
 </html>
